syntax = "proto3";

package proto;

option go_package = "./proto";

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {}
}

message GetUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
}

message GetUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string statusCodeBerhasilGetUser = 4;
}

message RegisterUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string role = 4;
}

message RegisterUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    string message = 5;
    string statusCodeBerhasilRegister = 6;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    string token = 5;
    string message = 6;
    string statusCodeBerhasilLogin = 7;
}
